Fixes the alignment of `form-icon`s
Also updates some of the language for the `form-icon`s in the docs

--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -177,6 +177,9 @@ textarea.form-input {
 		transform: translateY(-50%);
 		width: $control-icon-size;
 		z-index: $zindex-0 + 1;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 }
 
